# qr-code-generator

./: README.md  pyproject.toml  qr_generator.py
